added support of favicon and time in notice

--- a/html/style.css
+++ b/html/style.css
@@ -21,6 +21,11 @@ Z#note {
   margin-left: 50px;
   font-style: normal;
 }
+Z#time {
+  font-size: 12pt;
+  margin-left: 50px;
+  font-style: italic;
+}
 z#p {
   font-size: 12pt;
   margin-left: 10px;
